--- a/app/globals.css
+++ b/app/globals.css
@@ -1,3 +1,7 @@
+html {
+  box-sizing: border-box;
+}
+
 body {
   font-family:
     -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen, Ubuntu,
@@ -15,4 +19,5 @@ main {
   flex-direction: column;
   align-items: center;
   justify-content: center;
+  min-height: 100vh;
 }
