--- a/components/NoteList/NoteList.module.css
+++ b/components/NoteList/NoteList.module.css
@@ -37,6 +37,9 @@
   line-clamp: 3;
   -webkit-box-orient: vertical;
   overflow: hidden;
+  white-space: pre-wrap;
+  word-wrap: break-word;
+  overflow-wrap: anywhere;
 }
 
 .button {
